# GeoSpot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  check-dependencies.sh  pyproject.toml  registry.toml  start-server.sh  start-studio.sh
agents/content_generator/: .env_sample  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
agents/data_analyzer/: .env_sample  coral-agent.toml  main.py  pyproject.toml
agents/orchestrator/: .env_sample  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
src/geospot/: __init__.py  cli.py  core.py  models.py  scoring.py  server.py  tools.py
src/geospot/server/: app.py
